worked on VQ-3779 & VQ-3803

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -185,6 +185,11 @@
     "Required Documents": "Required Documents",
     "Service Provider Type": "Service Provider Type",
     "FMS": "FMS",
+    "setups":"Set ups",
+    "GL Parameters":"GL Parameters",
+    "CB Parameters":"CB Parameters",
+    "DB Parameters":"DB Parameters",
+    "CR Parameters":"CR Parameters",
     "General Ledger": "General ledger",
     "Cashbook": "Cashbook",
     "Debtors": "Debtors",
