--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2770,7 +2770,7 @@
       "no":"No",
      "Edit Narration":"Edit Narration",
       "accountType":"Account type",
-      "searchCriteria":"Search Criteria",
+      "searchCriteria":"Search criteria",
       "search":"Search",
       "description":"Description",
       "name":"Name",
